force-app/main/default/objects/DuplicateRunResult__c/DuplicateRunResult__c.object-meta.xml
<CustomObject>
    <description
  >Stores results from duplicate record merging operations</description>
    <label>Duplicate Run Result</label>
    <nameField>
        <displayFormat>DRR-{0000}</displayFormat>
        <label>Run Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Duplicate Run Results</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>