force-app/main/default/objects/DuplicateRunResult__c/fields/AverageMatchScore__c.field-meta.xml
<CustomField>
    <fullName>AverageMatchScore__c</fullName>
    <description>Average match score for duplicates found</description>
    <label>Average Match Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>