force-app/main/default/objects/DuplicateRunResult__c/fields/BatchJobId__c.field-meta.xml
<CustomField>
    <fullName>BatchJobId__c</fullName>
    <description>ID of the batch job that created this result</description>
    <label>Batch Job ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>