force-app/main/default/objects/DuplicateRunResult__c/fields/BatchSize__c.field-meta.xml
<CustomField>
    <fullName>BatchSize__c</fullName>
    <description>Size of batches used during processing</description>
    <inlineHelpText>Size of batches used during processing</inlineHelpText>
    <label>Batch Size</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>