force-app/main/default/objects/DuplicateRunResult__c/fields/ConfigurationName__c.field-meta.xml
<CustomField>
    <fullName>ConfigurationName__c</fullName>
    <description>Name of the configuration used for this run</description>
    <label>Configuration Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>