force-app/main/default/objects/DuplicateRunResult__c/fields/DuplicatesFound__c.field-meta.xml
<CustomField>
    <fullName>DuplicatesFound__c</fullName>
    <description>Number of duplicate groups found</description>
    <label>Duplicates Found</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>