force-app/main/default/objects/DuplicateRunResult__c/fields/ErrorMessages__c.field-meta.xml
<CustomField>
    <fullName>ErrorMessages__c</fullName>
    <description>Error messages from the run</description>
    <label>Error Messages</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>