force-app/main/default/objects/DuplicateRunResult__c/fields/IsDryRun__c.field-meta.xml
<CustomField>
    <fullName>IsDryRun__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether this was a dry run (no actual merges)</description>
    <label>Is Dry Run</label>
    <type>Checkbox</type>
</CustomField>