force-app/main/default/objects/DuplicateRunResult__c/fields/JobCompletionTime__c.field-meta.xml
<CustomField>
    <fullName>JobCompletionTime__c</fullName>
    <description>Time when the job was completed</description>
    <label>Completion Time</label>
    <type>DateTime</type>
</CustomField>