force-app/main/default/objects/DuplicateRunResult__c/fields/ObjectApiName__c.field-meta.xml
<CustomField>
    <fullName>ObjectApiName__c</fullName>
    <description>API name of the object processed</description>
    <label>Object API Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>