force-app/main/default/objects/DuplicateRunResult__c/fields/PerformanceMetrics__c.field-meta.xml
<CustomField>
    <fullName>PerformanceMetrics__c</fullName>
    <description>Performance metrics data in JSON format</description>
    <inlineHelpText>Performance metrics and optimization data collected during processing</inlineHelpText>
    <label>Performance Metrics</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>