force-app/main/default/objects/DuplicateRunResult__c/fields/ProcessingTimeMs__c.field-meta.xml
<CustomField>
    <fullName>ProcessingTimeMs__c</fullName>
    <description>Processing time in milliseconds</description>
    <label>Processing Time (ms)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>