force-app/main/default/objects/DuplicateRunResult__c/fields/RecordsFailed__c.field-meta.xml
<CustomField>
    <fullName>RecordsFailed__c</fullName>
    <description>Number of records that failed processing</description>
    <inlineHelpText>Number of records that failed processing</inlineHelpText>
    <label>Records Failed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>