force-app/main/default/objects/DuplicateRunResult__c/fields/RecordsSucceeded__c.field-meta.xml
<CustomField>
    <fullName>RecordsSucceeded__c</fullName>
    <description>Number of records successfully processed</description>
    <inlineHelpText>Number of records successfully processed</inlineHelpText>
    <label>Records Succeeded</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>